--- a/FlightControlWeb/wwwroot/css/MainWindowStyles.css
+++ b/FlightControlWeb/wwwroot/css/MainWindowStyles.css
@@ -43,6 +43,7 @@ h5 {
     padding: 3px;
     color: white;
     text-align: center;
+    min-width:525px;
 }
 
 h3 {
@@ -64,7 +65,7 @@ h1 {
     height: 200px;
     overflow: auto;
     margin-bottom: 30px;
-    position: relative;
+    position: static;
 }
 
 #table-wrapper {
@@ -81,7 +82,7 @@ td {
     max-width: 100px;
     word-wrap: break-word;
     text-align: center;
-    font-weight: 500;
+    font-weight: 700;
 }
 
 th {
@@ -106,6 +107,11 @@ th {
     justify-content: center;
     vertical-align:top;
    
+}
+
+
+body {
+    min-width: 1000px;
 }
 
 
